--- a/steps/hearing/the-hearing/template.html
+++ b/steps/hearing/the-hearing/template.html
@@ -1,5 +1,6 @@
 {% extends "components/form-template.html" %}
-{% from "components/fields.njk" import formSection, selectionButtons %}
+{% from "components/fields.njk" import formSection %}
+{% from "components/common/radio.njk" import govRadio %}
 
 {% set title = content["title" + suffix] %}
 
@@ -22,19 +23,18 @@
         </ul>
 
         <p class="govuk-body">{{ content.hearingSupportList.information | safe }}</p>
-    {% else %}   
+    {% else %}
         <p class="govuk-body">{{ content.subtitle | safe }}</p>
         <p class="govuk-body">{{ content.explainReasons | safe }}</p>
         <p class="govuk-body">{{ content.arrangeSupport | safe }}</p>
     {% endif %}
 
-    {{ selectionButtons(
-        fields.attendHearing,
-        content.fields.attendHearing["title" + suffix],
+    {{ govRadio(field = fields.attendHearing,
+        headerText = content.fields.attendHearing["title" + suffix],
         hideQuestion = false,
-        options = [
-            { label: content.fields.attendHearing["yes" + suffix], value: "yes" },
-            { label: content.fields.attendHearing["no" + suffix], value: "no" }
-        ])
-    }}
+        isPageHeading=false,
+        items = [
+            { value: "yes", text: content.fields.attendHearing["yes" + suffix] },
+            { value: "no", text: content.fields.attendHearing["no" + suffix] }
+    ]) }}
 {% endblock %}
