--- a/steps/identity/appellant-role/template.html
+++ b/steps/identity/appellant-role/template.html
@@ -6,12 +6,16 @@
 
 {% block fields %}
         {% call formSection() %}
-            {{ govRadio(field=fields.ibcRole, headerText=content.title, hideQuestion = true, items = [
-            { text: content.fields.ibcRole.myself,                   value: "myself" },
-            { text: content.fields.ibcRole.parent,                   value: "parent" },
-            { text: content.fields.ibcRole.guardian,                 value: "guardian" },
-            { text: content.fields.ibcRole.powerOfAttorney,          value: "powerOfAttorney" },
-            { text: content.fields.ibcRole.deceasedRepresentative,   value: "deceasedRepresentative" }
+            {{ govRadio(
+                field = fields.ibcRole,
+                headerText = content.title,
+                hideQuestion = true,
+                items = [
+                    { text: content.fields.ibcRole.myself,                   value: "myself" },
+                    { text: content.fields.ibcRole.parent,                   value: "parent" },
+                    { text: content.fields.ibcRole.guardian,                 value: "guardian" },
+                    { text: content.fields.ibcRole.powerOfAttorney,          value: "powerOfAttorney" },
+                    { text: content.fields.ibcRole.deceasedRepresentative,   value: "deceasedRepresentative" }
             ]) }}
         {% endcall %}
 {% endblock %}
