SSCSCI-1567: mrn date change for headings

--- a/steps/compliance/mrn-date/template.html
+++ b/steps/compliance/mrn-date/template.html
@@ -16,6 +16,7 @@
         {{ date(
             fields.mrnDate,
             content["dateLegend" + suffix],
+            isPageHeading = false,
             hint = content["dateHint" + suffix],
             labels = {
                 day: content.fields.date.day,
