SSCSCI-1567: Updating header for evidence upload screen

--- a/steps/reasons-for-appealing/evidence-upload/template.html
+++ b/steps/reasons-for-appealing/evidence-upload/template.html
@@ -32,7 +32,7 @@
     {% endif %}
     <div id="evidence-upload"></div>
 
-    {{ header(content.itemsListLabel, size='s') }}
+    {{ header(content.itemsListLabel, size='s', isPageHeader=false) }}
     {{ super() }}
 {% endblock %}
 
