--- a/steps/sms-notify/text-reminders/template.html
+++ b/steps/sms-notify/text-reminders/template.html
@@ -1,5 +1,5 @@
 {% extends "components/form-template.html" %}
-{% from "components/fields.njk" import formSection, selectionButtons %}
+{% from "components/fields.njk" import formSection %}
 {% from "components/common/radio.njk" import govRadio %}
 
 {% set title = content.title %}
