--- a/steps/compliance/dwp-issuing-office/template.html
+++ b/steps/compliance/dwp-issuing-office/template.html
@@ -1,5 +1,5 @@
 {% extends "components/form-template.html" %}
-{% from "components/fields.njk" import select, selectionButtons %}
+{% from "components/fields.njk" import select %}
 
 {% set title = content.title | safe %}
 
