Appellant name text input change

--- a/steps/identity/appellant-name/template.html
+++ b/steps/identity/appellant-name/template.html
@@ -1,7 +1,8 @@
 {% extends "components/form-template.html" %}
-{% from "components/fields.njk" import select, textbox, formSection %}
+{% from "components/fields.njk" import select, formSection %}
+{% from "components/common/textInput.njk" import govTextInput %}
 
-{% set title = title | safe %}
+{% set title = title %}
 
 {% block fields %}
     {% call formSection() %}
@@ -15,7 +16,15 @@
                 options = titlesList
             ) }}
         {% endif %}
-        {{ textbox(fields.firstName, content.fields.firstName.title, hint="") }}
-        {{ textbox(fields.lastName, content.fields.lastName.title, hint="") }}
+        {{ govTextInput(fields.firstName,
+        content.fields.firstName.title,
+        hideLabel = false,
+        isPageHeading = false) }}
+
+        {{ govTextInput(fields.lastName,
+        content.fields.lastName.title,
+        hideLabel = false,
+
+        isPageHeading = false) }}
     {% endcall %}
 {% endblock %}
