--- a/steps/hearing/options/template.html
+++ b/steps/hearing/options/template.html
@@ -7,7 +7,7 @@
     <p class="govuk-body">{{ content.subtitle }}</p>
     <p class="govuk-body">{{ content.tribunalExplained }}</p>
     <p class="govuk-body">{{ content.supportExplained }}</p>
-    <p class="govuk-heading-m">{{ content.fields.title }}</p>
+    <h2 class="govuk-heading-m">{{ content.fields.title }}</h2>
     <p class="govuk-hint">{{ content.instructions }}</p>
 
 
