--- a/steps/hearing/the-hearing/template.html
+++ b/steps/hearing/the-hearing/template.html
@@ -6,14 +6,14 @@
 {% block fields %}
         <p class="govuk-body">{{ content.subtitle }}</p>
 
-        <p class="govuk-heading-m">{{ content.hearingFormatsList.title }}</p>
+        <h2 class="govuk-heading-m">{{ content.hearingFormatsList.title }}</h2>
         <p class="govuk-body">{{ content.hearingFormatsList.subtitle }}</p>
         <ul class="govuk-list govuk-list--bullet">
             <li>{{ content.hearingFormatsList.bulletPoint1 }}</li>
             <li>{{ content.hearingFormatsList.bulletPoint2 }}</li>
         </ul>
 
-        <p class="govuk-heading-m">{{ content.hearingSupportList.title }}</p>
+        <h2 class="govuk-heading-m">{{ content.hearingSupportList.title }}</h2>
         <p class="govuk-body">{{ content.hearingSupportList.subtitle }}</p>
         <ul class="govuk-list govuk-list--bullet">
             <li>{{ content.hearingSupportList.bulletPoint1 }}</li>
