Removing unused imports

--- a/steps/start/language-preference/template.html
+++ b/steps/start/language-preference/template.html
@@ -1,5 +1,5 @@
 {% extends "components/form-template.html" %}
-{% from "components/fields.njk" import formSection, selectionButtons, textarea, textbox, select %}
+{% from "components/fields.njk" import formSection %}
 {% from "components/toggle_help.njk" import toggleHelp %}
 {% from "components/common/radio.njk" import govRadio %}
 
