Add text to draft benefit appeals page

--- a/steps/draft-appeals/template.html
+++ b/steps/draft-appeals/template.html
@@ -20,6 +20,8 @@
 
     <p>{{ content.description.line4 }}</p>
 
+    <p>{{ content.description.line5 }}</p>
+
     <br>
 
     <div class="form-buttons-group">
