Fix to give appropriate legend text to radio buttons

--- a/steps/compliance/have-contacted-dwp/template.html
+++ b/steps/compliance/have-contacted-dwp/template.html
@@ -14,7 +14,7 @@
         <p class="govuk-body">{{ content.subtitle }}</p>
 
         {{ govRadio(field = fields.haveContactedDWP,
-            headerText = content.subtitle,
+            headerText = content.title,
             hideQuestion = true,
             isPageHeading = false,
             items = [
