--- a/steps/appointee/appointee-name/template.html
+++ b/steps/appointee/appointee-name/template.html
@@ -1,5 +1,6 @@
 {% extends "components/form-template.html" %}
-{% from "components/fields.njk" import select, textbox, formSection %}
+{% from "components/fields.njk" import select, formSection %}
+{% from "components/common/textInput.njk" import govTextInput %}
 
 {% set title = content.title | safe %}
 
@@ -12,7 +13,17 @@
             content.fields.title.title,
             options = titlesList
         ) }}
-        {{ textbox(fields.firstName, content.fields.firstName.title, hint="") }}
-        {{ textbox(fields.lastName, content.fields.lastName.title, hint="") }}
+        {{ govTextInput(
+            fields.firstName,
+            content.fields.firstName.title,
+            hideLabel = false,
+            isPageHeading = false
+        ) }}
+        {{ govTextInput(
+            fields.lastName,
+            content.fields.lastName.title,
+            hideLabel = false,
+            isPageHeading = false
+        ) }}
     {% endcall %}
 {% endblock %}
