--- a/steps/hearing/arrangements/template.html
+++ b/steps/hearing/arrangements/template.html
@@ -1,5 +1,5 @@
 {% extends "components/form-template.html" %}
-{% from "components/fields.njk" import textbox, textarea, select %}
+{% from "components/fields.njk" import textarea, select %}
 {% from "components/common/checkbox.njk" import govCheckbox %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 
