--- a/steps/start/benefit-type/template.html
+++ b/steps/start/benefit-type/template.html
@@ -1,5 +1,5 @@
 {% extends "components/form-template.html" %}
-{% from "components/fields.njk" import textbox, select %}
+{% from "components/fields.njk" import select %}
 {% from "components/toggle_help.njk" import toggleHelp %}
 {% from "details/macro.njk" import govukDetails %}
 
