--- a/steps/start/postcode-checker/template.html
+++ b/steps/start/postcode-checker/template.html
@@ -1,5 +1,5 @@
 {% extends "components/form-template.html" %}
-{% from "components/fields.njk" import textbox, formSection %}
+{% from "components/fields.njk" import formSection %}
 {% from "components/common/textInput.njk" import govTextInput %}
 
 {% set title = content.title | safe %}
