SSCSCI-1612: Changing implementation of input for appellant international details

--- a/steps/identity/appellant-international-contact-details/template.html
+++ b/steps/identity/appellant-international-contact-details/template.html
@@ -1,19 +1,28 @@
 {% extends "components/form-template.html" %}
-{% from "components/fields.njk" import textbox, formSection, select %}
+{% from "components/fields.njk" import formSection, select %}
 {% from "postcodeLookup/template.html" import postcodeLookup  %}
+{% from "components/common/textInput.njk" import govTextInput %}
 
 {% set title = content.title %}
 
 {% block fields %}
     {% call formSection() %}
         <p class="govuk-body">{{ content.subtitle }}</p>
-        {{ textbox(fields.addressLine1,             content.fields.addressLine1.title,          hint="") }}
-        {{ textbox(fields.addressLine2,             content.fields.addressLine2.title,          hint="") }}
-        {{ textbox(fields.townCity,                 content.fields.townCity.title,              hint="") }}
-        {{ select(fields.country,                   content.fields.country.title,               options=getCountries) }}
-        {{ textbox(fields.postCode,                 content.fields.postCode.title,            hint="") }}
-        {{ select(fields.portOfEntry,               content.fields.portOfEntry.title,           hint=content.fields.portOfEntry.hint,           options=getPortOfEntryList)}}
-        {{ textbox(fields.phoneNumber,              content.fields.phoneNumber.title,           hint=content.fields.phoneNumber.hint) }}
-        {{ textbox(fields.emailAddress,             content.fields.emailAddress.title,          hint=content.fields.emailAddress.hint) }}
+        {{ govTextInput(fields.addressLine1,    content.fields.addressLine1.title,      isPageHeading = false) }}
+        {{ govTextInput(fields.addressLine2,    content.fields.addressLine2.title,      isPageHeading = false) }}
+        {{ govTextInput(fields.townCity,        content.fields.townCity.title,          isPageHeading = false) }}
+        {{ select(fields.country,               content.fields.country.title,           options=getCountries) }}
+        {{ select(fields.portOfEntry,           content.fields.portOfEntry.title,       hint=content.fields.portOfEntry.hint,  options=getPortOfEntryList)}}
+        {{ govTextInput(fields.phoneNumber,
+            content.fields.phoneNumber.title,
+            hint=content.fields.phoneNumber.hint,
+            isPageHeading = false
+        ) }}
+        {{ govTextInput(
+            fields.emailAddress,
+            content.fields.emailAddress.title,
+            hint=content.fields.emailAddress.hint,
+            isPageHeading = false
+        ) }}
     {% endcall %}
 {% endblock %}
